ingress/nginx-blue-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-blue-deploy
  labels:
    app: nginx-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-blue
  template:
    metadata:
      labels:
        app: nginx-blue
    spec:
      volumes:
      - name: webdata
        emptyDir: {}
      containers:
      - image: docker-registry.lab.net:5000/nginx:latest
        name: nginx
        volumeMounts:
        - name: webdata
          mountPath: "/usr/share/nginx/html"
